--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -18,12 +18,12 @@
                 <i class="icon-caret-down"></i>
               </a>
               <ul class="dropdown-menu">
-                <li>
+                <!-- <li>
                   <%= link_to "My Account", '/account' %>
                 </li>
                 <li>
                   <%= link_to "My Brackets", brackets_path %>
-                </li>
+                </li> -->
                 <li>
                   <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
                 </li>
@@ -35,7 +35,7 @@
           </li>
           <% end %>
         </ul>
-      </div><!--/.nav-collapse -->
+      </div><!--/.nav -->
     </div>
   </div>
 </div>
