--- a/app/assets/stylesheets/account.css.scss
+++ b/app/assets/stylesheets/account.css.scss
@@ -2,6 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.waiting-info {
+	font-size: 24px;
+	line-height: 32px;
+	text-align: center;
+}
+
+
 /* Widget Header */
 
 .widget-header {
