--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -1,36 +1,7 @@
     <section class="center" id="landing-video">
         <div class="container">
-            <div class="row">
-                <div class="span10 offset1">
-                    <div class="hero ">
-                        <div class="video" rel="tooltip" title="Embed any product demos or promotional videos without worrying about if they will fit to different screen sizes. Don't want to include a video? Easy to remove with no side effects. " data-placement="right">
-                            <iframe src="http://player.vimeo.com/video/61319484" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-                        </div>
-                    </div>
-                </div>
-                <div class="span8 offset2">
-                </div>
+            <div class="video" rel="tooltip" data-placement="right">
+                <iframe class="video-right" src="http://player.vimeo.com/video/61319484" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
             </div>
         </div>
     </section>
-    <!-- <section class="dark" id="signup">
-        <div class="container">
-            <div class="row">
-                <div class="span12 center">
-                    <h2 class="cursive"> Get Started </h2>
-                    <br/><br/>
-                </div>
-            </div>
-            <div class="row">
-                <div class="span4 center">
-                    <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook), :class => 'btn' %>
-                </div>
-                <div class="span4 center">
-                    <%= link_to "Sign in with Email", new_user_registration_path, :class => 'btn' %>
-                </div>  
-                <div class="span4 center">
-                    <%= link_to "Sign out", destroy_user_session_path, :method => :delete, :class => 'btn' %>
-                </div>
-            </div>
-        </div>
-    </section> -->
