remove scrollspy. We weren't using it. And it broke stuff.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <%= csrf_meta_tags %>
 </head>
 
-<body data-spy="scroll" data-target=".navbar">
+<body>
   <div id="fb-root"></div>
 
   <%= render "shared/navbar" %>
