--- a/app/assets/stylesheets/account.css.scss
+++ b/app/assets/stylesheets/account.css.scss
@@ -3,9 +3,20 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .waiting-info {
-	font-size: 24px;
-	line-height: 32px;
+	font-size: 22px;
+	line-height: 30px;
 	text-align: center;
+}
+
+.waiting-list-form-container {
+	margin-top: 40px;
+	margin-bottom: 100px;
+}
+
+.waiting-list-form {
+	label {
+		font-size: 18px;
+	}
 }
 
 
