--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -4,11 +4,13 @@
 
 //-- moved from main.css (Arun's CSS)
 
-.video {
+.video{
   padding-top: 0px;
   width: 100%;
   height: 100%;
   margin: 0 auto;
+  text-align:right;
+
 }
 .video iframe{
   /*width: 80%;
@@ -16,8 +18,17 @@
   width: 640px;
   height: 480px;
 }
-//----
-
-#landing-video {
+#landing-video{
 	background-color: #000;
+	padding: 35px 0 35px 0;
+}
+.landing-hero{
+	float:left;
+	width: 260px;
+}
+.landing-hero h1{
+	font-size:28px;
+	color: #fff;
+	line-height:1.5;
+	font-weight:300;
 }
