--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
             </li>
           <% else %>
           <li>
-            <%= link_to "Get Started", '#signups', :class => 'cursive btn-primary', :'data-toggle' => 'modal'%>
+            <%= link_to "Get Started", '#signups', :'data-toggle' => 'modal'%>
           </li>
           <% end %>
         </ul>
