home page button

--- a/app/assets/stylesheets/about_us.css.scss
+++ b/app/assets/stylesheets/about_us.css.scss
@@ -43,7 +43,8 @@
  margin-bottom: 0px; 
 }  
 
-.accordion section{   
+.accordion section{
+  width: 49%;   
   float:left;  
   overflow:hidden;    
   cursor:pointer;      
