--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -2,9 +2,7 @@
     	<div class="container">
     		<div class="hero landing-hero">
     			<h1>Create a bracket and help fight against Sudden Infant Death Syndrome!</h1>
-    			<button class="btn btn-primary btn-large">
-    			<%= link_to "Get Started", '#signups', :'data-toggle' => 'modal'%>
-    		</button>
+    			<%= link_to "Get Started", '#signups', :'data-toggle' => 'modal', :class => "landing-button cursive"%>
     		</div>
     		<div class="video" rel="tooltip" data-placement="right">
     			<iframe src="http://player.vimeo.com/video/61319484" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
