Fix that fucking accordion thingy on the about page. Now it expands about michael by default. Yeah!

--- a/app/assets/stylesheets/about_us.css.scss
+++ b/app/assets/stylesheets/about_us.css.scss
@@ -43,31 +43,21 @@
  margin-bottom: 0px; 
 }  
 
-.accordion section{
-  width: 49%;   
+.accordion section {
   float:left;  
   overflow:hidden;    
   cursor:pointer;      
   margin:3px;   
-}  
+}
 
 .accordion section p {   
   display:none;   
 }    
 
-.accordion section:target {   
-  background-color: rgba(255,255,255,0.9);
-}  
-
-.accordion section:target p {
-  padding: 0 20px 20px 20px;
-  font-size: 18px;
-  line-height: 1.5; 
-  display:block;  
-} 
-
-.horizontal section{  
-  width:24%; 
+.horizontal section {  
+  width: 24%;
+}
+.horizontal section {
   height:100%;   
   -moz-transition: width 0.2s ease-out;   
   -webkit-transition:width 0.2s ease-out;  
@@ -78,20 +68,34 @@
 /*Header of closed slide*/  
 .horizontal section h2 {
   color:#FFF;    
-  font-size: 40px;
-  line-height:1.5;   
-  position:relative;    
+  font-size: 40px;    
   margin-top:100px;  
-}   
-/*On mouse over open slide*/  
-.horizontal :target{   
- width:74%;  
- height:100%;   
-}  
-.horizontal :target h2{   
- margin-top:20px;   
- color:#333;
- font-size: 28px;
+}
+
+.horizontal section h2 {
+	line-height:1.5;   
+  position:relative;
+}
+
+.accordion-selected {
+	background-color: rgba(255,255,255,0.9) !important;
+	width: 74% !important;  
+ 	height: 100% !important;   
+	p {
+		padding: 0 20px 20px 20px !important;
+  	font-size: 18px !important;
+  	line-height: 1.5 !important; 
+  	display:block !important;  
+	}
+	h2 {
+		margin-top:20px !important;   
+ 		color:#333 !important;
+ 		font-size: 28px !important;
+	}
+}
+
+.accordion section:target {   
+  @extend .accordion-selected;
 }  
 
 //--- 
