Changed some navbar links a little bit

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,8 +5,8 @@
 				<div class="span10 offset1">
 					<div class="hero">
 						<h1>Our Mission</h1>
-						<p>Brackets4Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets4Life. Current research studies can be found <a href="http://www.cjsids.org/resource-center/sids-research/recent-research.html">here</a>.</p>
-						<p>We also hope to increase awareness about what steps parents can currently take to reduce their baby’s risk of SIDS. For a summary of these steps, parents should follow this <a href="http://www.cjsids.org/resource-center/risk-reduction-strategy.html">link</a>.</p>
+						<p>Brackets4Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets4Life. If you're interested, you can check out some <a href="http://www.cjsids.org/resource-center/sids-research/recent-research.html">current research studies</a>.</p>
+						<p>We also hope to increase awareness. Here's what you can do to <a href="http://www.cjsids.org/resource-center/risk-reduction-strategy.html">reduce the risk of SIDS</a>.</p>
 					</div>
 				</div>
 			</div>
