Customize embedded vimeo player

--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -5,10 +5,40 @@
     			<%= link_to "Get Started", '#signups', :'data-toggle' => 'modal', :class => "landing-button cursive"%>
     		</div>
     		<div class="video" rel="tooltip" data-placement="right">
-    			<iframe src="http://player.vimeo.com/video/61319484" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    			<iframe src="http://player.vimeo.com/video/61319484?title=0&byline=0&portrait=0&color=#0088cc" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     		</div>
     	</div>
     </section>
+
+    <!-- <section class="how-it-works">
+        <div class="container">
+            <h1 class="center huge">How It Works</h1>
+            <div class="row step step1">
+                <div class="span3">
+                    <%= image_tag "http://placehold.it/200x200", :class => "step-image" %>
+                </div>
+                <div class="span9">
+
+                </div>
+            </div>
+            <div class="row step step2">
+                <div class="span3">
+                    <%= image_tag "http://placehold.it/200x200", :class => "step-image" %>
+                </div>
+                <div class="span9">
+
+                </div>
+            </div>
+            <div class="row step step3">
+                <div class="span3">
+                    <%= image_tag "http://placehold.it/200x200", :class => "step-image" %>
+                </div>
+                <div class="span9">
+
+                </div>
+            </div>
+        </div>
+    </section> -->
 
     <div class="modal hide fade" id="signups">
     	<div class="modal-header" tabindex="-1" role="dialog" aria-hidden="true">
