Fix vimeo player color

--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -5,7 +5,7 @@
     			<%= link_to "Get Started", '#signups', :'data-toggle' => 'modal', :class => "landing-button cursive"%>
     		</div>
     		<div class="video" rel="tooltip" data-placement="right">
-    			<iframe src="http://player.vimeo.com/video/61319484?title=0&byline=0&portrait=0&color=#0088cc" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+    			<iframe src="http://player.vimeo.com/video/61319484?title=0&byline=0&portrait=0&color=0088cc" width="400" height="300" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
     		</div>
     	</div>
     </section>
