Move images from public/img to app/assets/images

--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -10,7 +10,7 @@
     	</div>
     </section>
 
-    <!-- <section class="how-it-works">
+    <section class="how-it-works">
         <div class="container">
             <h1 class="center huge">How It Works</h1>
             <div class="row step step1">
@@ -38,7 +38,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <div class="modal hide fade" id="signups">
     	<div class="modal-header" tabindex="-1" role="dialog" aria-hidden="true">
