--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,7 +22,7 @@ body{
   background-color: rgb(245, 245, 245);
 }
 .navbar{
-  background:url("../img/subtle_carbon.png") repeat #1c1c1c;
+  background:image-url("subtle_carbon.png") repeat #1c1c1c;
 }
 .navbar .brand h1{
   font-size: 24px;
