--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,7 +12,7 @@
       Built by <a href="http://incube.us"> InCube </a> from <a href="http://entrepreneurship.duke.edu/campus-resources"> Duke University </a>
     </li>
   </ul>
-  <ul class="unstyled links center">
+  <!-- <ul class="unstyled links center">
     <li>
       <a href="">
         Contact Us
@@ -33,10 +33,10 @@
         Terms of Service
       </a>
     </li>
-  </ul>
+  </ul> -->
   <ul  class="unstyled rights center">
     <li>
-      Copyright &copy; 2012 Company. All rights reserved
+      Copyright &copy; 2012 Brackets4Life. All rights reserved
     </li>
   </ul>
 </footer>
