about us page content changes

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,7 +5,7 @@
 				<div class="span10 offset1">
 					<div class="hero">
 						<h1>Our Mission</h1>
-						<p>Brackets4Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets4Life. If you're interested, you can check out some <a href="http://www.cjsids.org/resource-center/sids-research/recent-research.html">current research studies</a>.</p>
+						<p>Brackets 4 Life applies the energy of March Madness to take steps towards finding a cure for SIDS. SIDS research needs more funding and one way to achieve this is through efforts like Brackets 4 Life. If you're interested, you can check out some <a href="http://www.cjsids.org/resource-center/sids-research/recent-research.html">current research studies</a>.</p>
 						<p>We also hope to increase awareness. Here's what you can do to <a href="http://www.cjsids.org/resource-center/risk-reduction-strategy.html">reduce the risk of SIDS</a>.</p>
 					</div>
 				</div>
@@ -29,18 +29,16 @@
 								<br><br>
 								Over the past 9 years the McConville family has raised over $1 million for the CJ Foundation for SIDS. These much needed funds have given us the power to find answers to our questions and contribute to a future where every child has the opportunity to live life to its fullest.
 								<br><br>
-								“As we continue to live our life without "our little sunshine", we feel a "ray of hope" as we join with the CJ Foundation in the battle against SIDS. Together, we will make a difference in the life of a child.” - Jennifer McConville
+								“As we continue to live our life without our little sunshine, we feel a ray of hope as we join with the CJ Foundation in the battle against SIDS. Together, we will make a difference in the life of a child.” - Jennifer McConville
 							</p>
 						</section>	
 						<section id="incube">
 							<a href="#incube"><div class="img2"></div></a>
-							<h2 class="cursive"> Incube's Story </h2>
+							<h2 class="cursive"> InCube's Story </h2>
 							<p>
-								Incube is a student entrepreneurship group at Duke University.
+								InCube is a student entrepreneurship group at Duke University.
 								<br><br>
-								As a friend of InCube, Michael approached us asking for help in the creation of a March Madness Bracket website to raise money for the CJ Foundation for SIDS.  InCube was enthusiastic about Michael’s idea and we planned a Hack-a-Thon to completely finish his project in one night. 
-								<br><br>
-								The CJ Foundation is the largest non-government funder of research about SIDS and support for the families that have been affected by a SIDS death.  Since its founding in 1994, the CJ Foundation for SIDS has raised more than 50 million dollars.
+								As a friend of InCube, Michael approached us for help in the creation of a March Madness Bracket website to raise money for the CJ Foundation for SIDS.  InCube was enthusiastic about Michael’s idea and we planned a two part Hack-a-Thon to work on his project. Utlizing the programming, marketing, and design skills that we've learned in building our companies, we successfully pulled the project together in two days.
 							</p>
 						</section>
 					</div>
@@ -57,11 +55,11 @@
 						<h1>Our Team</h1>
 					</div>
 					<section class="main">
-						<h2 class="cursive">Michael McConville</h2>
 						<ul class="ch-grid">
 							<li>
 								<div class="ch-item ch-img-1">
 									<div class="ch-info">
+										<h3>Michael McConville</h3>
 									</div>
 								</div>
 							</li>
