--- a/app/views/home/landing.html.erb
+++ b/app/views/home/landing.html.erb
@@ -15,26 +15,59 @@
             <h1 class="center huge">How It Works</h1>
             <div class="row step step1">
                 <div class="span3">
-                    <%= image_tag "http://placehold.it/200x200", :class => "step-image" %>
+                    <%= image_tag "icon-step1.png", :class => "step-image" %>
                 </div>
-                <div class="span9">
-
+                <div class="span9 step-description">
+                    <h2>1. Sign up with Facebook or Email</h2>
+                    <p>
+                        You can get started by
+                        <%= link_to "connecting with Facebook", user_omniauth_authorize_path(:facebook) %>
+                        or using an
+                        <%= link_to "email/password combination", new_user_registration_path %>.
+                        If you connect with Facebook, we
+                        will never post to your wall without your permission.
+                    </p>
                 </div>
             </div>
             <div class="row step step2">
                 <div class="span3">
-                    <%= image_tag "http://placehold.it/200x200", :class => "step-image" %>
+                    <%= image_tag "icon-step2.png", :class => "step-image" %>
                 </div>
-                <div class="span9">
-
+                <div class="span9 step-description">
+                    <h2>2. Pick your Winners and Create a Bracket</h2>
+                    <p>
+                       After Selection Sunday, March 17th, you can create one or more
+                       "brackets." In other words, you can try to predict the winners of each
+                       match in the NCAA Men's Basketball Tournament.
+                    </p>
                 </div>
             </div>
             <div class="row step step3">
                 <div class="span3">
-                    <%= image_tag "http://placehold.it/200x200", :class => "step-image" %>
+                    <%= image_tag "icon-step3.png", :class => "step-image" %>
                 </div>
-                <div class="span9">
-
+                <div class="span9 step-description">
+                    <h2>3. Choose How Much You'd Like to Donate</h2>
+                    <p>
+                       The minimum donation for creating a bracket is $2, but you
+                       can create as many brackets as you wish and donate as much as
+                       you want. You can also donate directly without creating a bracket. 
+                    </p>
+                </div>
+            </div>
+            <div class="row additional-details">
+                <div class="span9 offset3">
+                    <h2>Additional Details</h2>
+                    <p>
+                        As the tournament progresses, you'll earn points for every prediction
+                        you get right. We'll post a leaderboard of the users with the most
+                        points.
+                    </p>
+                    <p>
+                        The proceeds will be divided in half. 50% will go toward research
+                        on Sudden Infant Death Syndrome. The top 5 users will each get to
+                        donate 10% of the proceeds to the charity of their choice.
+                    </p>
                 </div>
             </div>
         </div>
