--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,8 +23,13 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <%= link_to "My Account", '/account' %>
+                  <%= link_to "My Account", account_path %>
                 </li>
+                <% if !Rails.env.production? %>
+                  <li>
+                    <%= link_to "My Brackets", brackets_path %>
+                  </li>
+                <% end %>
                 <li>
                   <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
                 </li>
