--- a/app/assets/javascripts/payments.js.erb
+++ b/app/assets/javascripts/payments.js.erb
@@ -10,7 +10,7 @@ $(function () {
         };
 
         StripeCheckout.open({
-            key:         "<%= ENV['PUBLISHABLE_KEY'] %>",
+            key:         "<%= ENV['B4L_STRIPE_PUBLISHABLE_KEY'] %>",
             amount:      bill_amt,
             name:        '1 bracket to support Sudden Infant Death Syndrome Research',
             image: 		 "/assets/logo-black.png",
