--- a/app/assets/stylesheets/brackets_create.css.scss
+++ b/app/assets/stylesheets/brackets_create.css.scss
@@ -1,5 +1,9 @@
 // styles for the brackets/new page
-// created by Deo
+
+.bracket-payment-message {
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
 
 .game {
 	margin: 10px;
