--- a/app/assets/stylesheets/buttons.css.scss
+++ b/app/assets/stylesheets/buttons.css.scss
@@ -9,6 +9,10 @@
 	background-color: #ccc;
 	border: none;
 	text-shadow:1px 1px 0px rgba(50,50,50,0.2);
+	transition: background-color 0.3s;
+	-moz-transition: background-color 0.3s;
+	-webkit-transition: background-color 0.3s;
+	-o-transition: background-color 0.3s;
 	&:hover, &:active {
 		background-color: darken(#ccc, 14%);
 		text-decoration: none;
@@ -21,6 +25,6 @@
 	background-color: #0088cc;
 	color: white;
 	&:hover {
-		background-color: lighten(#0088cc, 14%);
+		background-color: lighten(#0088cc, 7%);
 	}
 }
