--- a/app/assets/javascripts/payments.js.erb
+++ b/app/assets/javascripts/payments.js.erb
@@ -9,6 +9,8 @@ $(function () {
 
         };
 
+        Stripe.setPublishableKey('<%= ENV['B4L_STRIPE_PUBLISHABLE_KEY'] %>');
+
         StripeCheckout.open({
             key:         "<%= ENV['B4L_STRIPE_PUBLISHABLE_KEY'] %>",
             amount:      bill_amt,
