Fix typo in payments.js.erb.

--- a/app/assets/javascripts/payments.js.erb
+++ b/app/assets/javascripts/payments.js.erb
@@ -9,7 +9,7 @@ $(function () {
 
         };
 
-        Stripe.setPublishableKey('<%= ENV['B4L_STRIPE_PUBLISHABLE_KEY'] %>');
+        Stripe.setPublishableKey("<%= ENV['B4L_STRIPE_PUBLISHABLE_KEY'] %>");
 
         StripeCheckout.open({
             key:         "<%= ENV['B4L_STRIPE_PUBLISHABLE_KEY'] %>",
