--- a/app/assets/javascripts/payments.js.erb
+++ b/app/assets/javascripts/payments.js.erb
@@ -1,5 +1,5 @@
 $(function () {
-  	var bill_amt = 2000;
+  	var bill_amt = 200;
 
     $('#customButton').click(function(){
         var token = function(res){
@@ -12,9 +12,9 @@ $(function () {
         StripeCheckout.open({
             key:         "<%= ENV['B4L_STRIPE_PUBLISHABLE_KEY'] %>",
             amount:      bill_amt,
-            name:        '1 bracket to support Sudden Infant Death Syndrome Research',
+            name:        '1 Bracket to Support SIDS Research',
             image: 		 "/assets/logo-black.png",
-            panelLabel:  'Checkout',
+            panelLabel:  'Donate',
             token:       token
         });
 
@@ -23,7 +23,7 @@ $(function () {
 
 	$('select.opts').on('change', function() {
 	    var total = 2 + parseInt(this.value,10);
-	    $('#amt_shown').text("$"+total+".00");
+	    $('#amt_shown').text("Total: $"+total+".00");
 	    bill_amt = total * 100;
 	    $("#payment_amt").val(bill_amt);
 	});
