--- a/app/views/brackets/show.html.erb
+++ b/app/views/brackets/show.html.erb
@@ -20,8 +20,9 @@
 
 <div class="bracket">
 	<div class="clearfix"></div>
-	<% @regions.each_pair do |name, region| %>
-		<div class="region" id="<%= name %>" data-region="<%= name %>">
+	<% @regions.keys.each_with_index do |name, index| %>
+		<% region = @regions[name] %>
+		<div class="region region<%= index+1 %>" id="<%= name %>" data-region="<%= name %>">
 			<ul class="round round1" id="<%= name %>-1" data-region="<%= name %>" data-round="1">
 				<% region[0].each do |match| %>
 					<li class="match" id="<%= match.match_id %>">
@@ -54,11 +55,11 @@
 	<% end %>
 	<div class="final-four">
 		<div class="final-four-inner">
-			<div class="south-east">
-				<%= @south_east.first.winner.name %>
+			<div class="final-four-one">
+				<%= @final_four_one.first.winner.name %>
 			</div>
-			<div class="west-midwest">
-				<%= @west_midwest.first.winner.name %>
+			<div class="final-four-two">
+				<%= @final_four_two.first.winner.name %>
 			</div>
 			<div class="champion">
 				<div class="champion-inner">
